--- a/index.html
+++ b/index.html
@@ -261,9 +261,7 @@
 
         <div class="about-card">
           <p>
-            I enjoy turning ambiguous problems into manufacturable solutions. My interests span CAD/CAM,
-            embedded systems, and rapid prototyping. When I’m not in the lab, I’m sketching concepts or
-            tuning toolpaths.
+            Belen Jesuit 2026. Love cars, motorsports and F1. Current goal is to study engineering and them branch off to aerospace or mechanical. I have steam experience from robotics, 3 years of 3D design and hands on internships.  
           </p>
           <ul class="meta">
             <li><strong>Tools:</strong> SolidWorks/Fusion, Altium/KiCad, Python/C/C++, Marlin/GRBL, Prusa/SLA.</li>
