--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
       <div class="hero-card" role="img" aria-label="Stylized blueprint background with components">
         <div class="hero-grid">
           <div class="chip">CAD</div>
-          <div class="chip">CNC</div>
+          <a href="Assigments/CNC.html">
+            <div class="chip">CNC</div>
+          </a>
           <div class="chip">PCB</div>
           <div class="chip">MCU</div>
           <div class="chip">3D</div>
