--- a/Assigments/CNC.html
+++ b/Assigments/CNC.html
@@ -60,6 +60,8 @@
             <span class="eyebrow">Vinyl</span>
             <h3>Vinyl Cutting</h3>
             <p>Fast, quiet cutting of adhesive films, heat‑transfer vinyl (HTV), and stencils.</p>
+            <img src="../brand/nauticeye logo1.png">
+            <img src="../IMG_0571.PNG">
             <ul class="list">
               <li>Prepare clean vectors; convert text to outlines.</li>
               <li>Set blade depth for just‑kiss cutting the film.</li>
