--- a/Assigments/CNC.html
+++ b/Assigments/CNC.html
@@ -48,13 +48,6 @@
             <span class="eyebrow">Laser</span>
             <h3>Laser Cutting & Engraving</h3>
             <p>High precision for sheet materials like plywood, acrylic, cardboard, and some fabrics.</p>
-            <ul class="list">
-              <li>Design in vector software (SVG, DXF, AI).</li>
-              <li>Set stroke colors for operations (e.g., red=cut, blue=score, black=engrave).</li>
-              <li>Choose power/speed/Hz per material thickness.</li>
-              <li>Focus lens, enable exhaust & air assist.</li>
-              <li>Run a <em>test cut</em> before production.</li>
-            </ul>
           </article>
           <article class="card">
             <span class="eyebrow">Vinyl</span>
@@ -63,22 +56,12 @@
             <img src="../brand/nauticeye logo1.png">
             <img src="../IMG_0571.PNG">
             <ul class="list">
-              <li>Prepare clean vectors; convert text to outlines.</li>
-              <li>Set blade depth for just‑kiss cutting the film.</li>
-              <li>Mirror artwork for HTV before cutting.</li>
-              <li>Weed carefully and apply with transfer tape or heat press.</li>
-            </ul>
           </article>
           <article class="card">
             <span class="eyebrow">CNC</span>
             <h3>CNC Routing</h3>
             <p>Subtractive machining of wood, plastics, and soft metals using toolpaths (2D/2.5D/3D).</p>
             <ul class="list">
-              <li>CAM setup: tool library, feeds & speeds, step‑down, step‑over.</li>
-              <li>Zero X/Y/Z with touch‑off; check stock clamps & clearance.</li>
-              <li>Simulate toolpaths and dry‑run above stock.</li>
-              <li>Dust collection and workholding are critical.</li>
-            </ul>
           </article>
         </div>
 
@@ -87,6 +70,9 @@
           <div class="grid cols-3">
             <div class="step"><div class="bullet">1</div><div><strong>Model</strong><br><span class="small">Create vectors (Inkscape/Illustrator) or 3D (Fusion 360/Rhino). Use real‑world units.</span></div></div>
             <div class="step"><div class="bullet">2</div><div><strong>Prepare</strong><br><span class="small">Set kerf/clearance, stroke widths, nesting, and line colors/layers by operation.</span></div></div>
+            <img src="image1.jpeg" alt="">
+            <img src="image8.jpeg" alt="">
+            <img style="width=60%"src="image7.jpeg" alt="">
             <div class="step"><div class="bullet">3</div><div><strong>Export</strong><br><span class="small">Export SVG/DXF for 2D or post‑process G‑code for CNC with the right post.</span></div></div>
             <div class="step"><div class="bullet">4</div><div><strong>Setup</strong><br><span class="small">Secure stock, focus/zero tools, set origin, enable extraction and air assist.</span></div></div>
             <div class="step"><div class="bullet">5</div><div><strong>Test</strong><br><span class="small">Run a small test: power/speed chips (laser) or surfacing/pocket test (CNC).</span></div></div>
@@ -154,3 +140,4 @@
                   <td>12–18 mm</td>
                   <td>6mm end mill, 18k RPM, 1500–2500 mm/min, 2–3 mm DOC</td>
                   <td>Go
+                    
