--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
           <div class="chip">CAD</div>
           <a href="Assigments/CNC.html">
             <div class="chip">CNC</div>
+              
+            </div>
           </a>
           <div class="chip">PCB</div>
           <div class="chip">MCU</div>
