--- a/index.html
+++ b/index.html
@@ -80,14 +80,9 @@
           <article class="card" id="problem-statement">
             <h3>Problem Statement</h3>
             <p>
-              Clearly defines the engineering challenge, stakeholders, functional requirements, constraints, and
-              success metrics.
-            </p>
-            <ul class="meta">
-              <li><strong>Scope:</strong> What problem, for whom, and why it matters.</li>
-              <li><strong>Requirements:</strong> Performance targets & constraints (size, cost, safety, etc.).</li>
-              <li><strong>Research:</strong> Prior art, market and technical review.</li>
-            </ul>
+              Most existing reef projects lack continuous, site-specific monitoring systems, leaving managers without the data needed to make timely, informed decisions that could keep reefs healthy.
+
+
             <a class="button button-text" href="#problem-statement-details">Read more ↓</a>
           </article>
 
@@ -102,7 +97,7 @@
               <li><strong>Models:</strong> First-order analyses & simulations.</li>
               <li><strong>Plan:</strong> Milestones, BOM, test strategy.</li>
             </ul>
-            <a class="button button-text" href="#pdr-details">View artifacts ↓</a>
+            <a class="button button-text" href="#justification synthesis">justification synthesis ↓</a>
           </article>
 
           <!-- Critical Design Review -->
