completed final work

--- a/Assigments/CNC.html
+++ b/Assigments/CNC.html
@@ -68,8 +68,9 @@
         <div class="card" style="margin-top:18px">
           <h3>General Design → Fabrication Pipeline</h3>
           <div class="grid cols-3">
-            <div class="step"><div class="bullet">1</div><div><strong>Model</strong><br><span class="small">Create vectors (Inkscape/Illustrator) or 3D (Fusion 360/Rhino). Use real‑world units.</span></div></div>
-            <div class="step"><div class="bullet">2</div><div><strong>Prepare</strong><br><span class="small">Set kerf/clearance, stroke widths, nesting, and line colors/layers by operation.</span></div></div>
+            <div class="step"><div class="bullet">1</div><div><strong>Model</strong><br><span class="small">Create vectors (Inkscape/Illustrator) or 3D (Fusion 360/Rhino).</span></div></div>
+            <img src="image.png" 
+            <div class="step"><div class="bullet">2</div><div><strong>Prepare</strong><br><span class="small">Attached logo to Cricket Design. Printed the logo as a sticker for Ipad .</span></div></div>
             <img src="image1.jpeg" alt="">
             <img src="image8.jpeg" alt="">
             <img style="width=60%"src="image7.jpeg" alt="">
