--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <li><strong>Models:</strong> First-order analyses & simulations.</li>
               <li><strong>Plan:</strong> Milestones, BOM, test strategy.</li>
             </ul>
-            <a class="button button-text" href="#justification synthesis">justification synthesis ↓</a>
+            <a href="PDR.md/Justification Synthesis.html">justification synthesis ↓</a>
           </article>
 
           <!-- Critical Design Review -->
@@ -260,7 +260,7 @@
 
         <div class="about-card">
           <p>
-            Belen Jesuit 2026. Love cars, motorsports and F1. Current goal is to study engineering and them branch off to aerospace or mechanical. I have steam experience from robotics, 3 years of 3D design and hands on internships.  
+            Belen Jesuit 2026. Love cars, motorsports and F1. Current goal is to study engineering and then branch off to aerospace or mechanical. I have steam experience from robotics, 3 years of 3D design and hands on internships.  
           </p>
           <ul class="meta">
             <li><strong>Tools:</strong> SolidWorks/Fusion, Altium/KiCad, Python/C/C++, Marlin/GRBL, Prusa/SLA.</li>
