--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
               
             </div>
           </a>
-          <div class="chip">PCB</div>
+          <a href="Assigments/EP.html">
+          <div class="chip">EP</div>
+          </a>
           <div class="chip">MCU</div>
           <div class="chip">3D</div>
           <div class="chip">CAM</div>
@@ -186,10 +188,9 @@
             <h3>Embedded Programming</h3>
             <p>Microcontroller bring-up, drivers, and firmware architecture.</p>
             <ul class="meta">
-              <li>GPIO, UART, I²C, SPI</li>
-              <li>RTOS basics</li>
-              <li>Power budgeting</li>
-            </ul>
+              <li>Seeed XIAO RP 2040 </li>
+              <li>Racing Light</li>
+            </ucl>
           </article>
 
           <!-- 3D Scanning -->
@@ -200,7 +201,7 @@
               <li>Mesh cleanup</li>
               <li>Registration</li>
               <li>Scale calibration</li>
-            </ul>
+            </ucl>
           </article>
 
           <!-- Computer-Controlled Machining -->
